Archive2/3d/4da2cca44951cc/output
+ g++-4.8 -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:18:60: error: invalid use of void expression
     std::copy(start, std::advance(end, 5), std::begin(dest));
                                                            ^
